--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,11 @@ button {
   padding: 0;
 }
 
+input {
+  outline: none;
+  border: none;
+}
+
 html,
 body {
   height: 100%;
@@ -134,7 +139,7 @@ body {
   font-family: gilroy, sans-serif;
   font-size: 16px;
   font-weight: 400;
-  color: #252B42;
+  color: #3A3A3A;
   line-height: 1.2;
 }
 
@@ -176,22 +181,380 @@ body {
   overflow: hidden;
 }
 
-.gilroy1 {
-  font-family: gilroy;
-  font-weight: 400;
+body {
+  background-color: #FCF8F3;
 }
 
-.gilroy2 {
-  font-family: gilroy;
-  font-weight: 500;
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 50;
 }
-
-.gilroy3 {
-  font-family: gilroy;
-  font-weight: 600;
+.header__inner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 50;
 }
-
-.gilroy4 {
-  font-family: gilroy;
+.header__body {
+  display: flex;
+  align-items: center;
+  padding: 5px 0;
+  min-height: 125px;
+  position: relative;
+}
+.header__main {
+  display: flex;
+  flex: 0 0 39.8387096774%;
+  align-items: center;
+}
+.header__logo {
   font-weight: 700;
+  font-size: 24px;
+  line-height: 120.8333333333%;
+  z-index: 5;
+  position: relative;
+}
+.menu {
+  flex: 0 1 420px;
+}
+.menu__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 3px;
+  padding: 5px 0;
+  position: relative;
+}
+.menu__item.hover .menu__sub-inner {
+  height: auto;
+}
+.menu__item.hover .menu__sub-list {
+  transform: scaleY(1);
+  opacity: 1;
+  visibility: visible;
+  padding: 15px 15px;
+  margin-top: 0;
+  margin: 0 -3px;
+}
+.menu__item.hover .menu__sub-item {
+  display: block;
+}
+.menu__item.hover .menu__arrow {
+  transform: rotate(-180deg);
+}
+.menu__item.hover .menu__link,
+.menu__item.hover .menu__arrow {
+  color: #E89F71;
+}
+@media (any-hover: hover) {
+  .menu__item:hover .menu__sub-list {
+    transform: translateY(0px);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    padding: 15px;
+  }
+  .menu__item:hover .menu__sub-item {
+    display: block;
+  }
+  .menu__item:hover .menu__sub-link {
+    line-height: 1.2;
+  }
+  .menu__item:hover .menu__arrow {
+    transform: rotate(-180deg);
+  }
+  .menu__item:hover .menu__link,
+  .menu__item:hover .menu__arrow {
+    color: #E89F71;
+  }
+}
+.menu__link {
+  font-weight: 500;
+  line-height: 150%;
+  transition: color 0.3s ease 0s;
+}
+.menu__arrow {
+  font-size: 8px;
+  margin-left: 10px;
+  transition: all 0.3s ease 0s;
+}
+.menu__sub-inner {
+  flex: 1 0 100%;
+  transition: all 0.3s ease 0s;
+}
+.menu__sub-list {
+  position: relative;
+  background-color: #E89F71;
+  padding: 15px;
+  transition: all 0.3s ease 0s;
+  margin: 0 -3px;
+}
+.menu__sub-item:not(:last-child) {
+  margin-bottom: 5px;
+}
+.menu__sub-link {
+  color: #fff;
+  font-size: 16px;
+}
+
+.search-form {
+  max-width: 473px;
+}
+.search-form__icon {
+  position: relative;
+  z-index: 10;
+  font-size: 22px;
+  color: #262F56;
+}
+.search-form__item {
+  background-color: #fff;
+  display: flex;
+}
+.search-form__btn {
+  height: 45px;
+  flex: 0 0 45px;
+  font-size: 15px;
+  color: #333333;
+}
+.search-form__input {
+  font-size: 14px;
+  line-height: 150%;
+  color: #616161;
+  flex: 1 0 auto;
+}
+
+.actions-header {
+  position: relative;
+  z-index: 5;
+  display: grid;
+  grid-template-columns: auto;
+  grid-auto-flow: column;
+  align-items: center;
+  gap: calc(15px + 17 * (100vw - 320px) / 671);
+}
+.actions-header__item {
+  line-height: 1;
+}
+.actions-header__item--favorites {
+  color: #262F56;
+  font-size: 24px;
+  transition: color 0.3s ease 0s;
+}
+@media (any-hover: hover) {
+  .actions-header__item--favorites:hover {
+    color: #E89F71;
+  }
+}
+.actions-header__item--user {
+  top: -1px;
+  width: calc(30px + 10 * (100vw - 320px) / 880);
+  height: calc(30px + 10 * (100vw - 320px) / 880);
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.cart-header__icon {
+  color: #262F56;
+  font-size: 28px;
+  transition: color 0.3s ease 0s;
+  position: relative;
+}
+@media (any-hover: hover) {
+  .cart-header__icon:hover {
+    color: #E89F71;
+  }
+}
+.cart-header span {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  line-height: 1;
+  padding-bottom: 2px;
+  top: -10px;
+  right: -10px;
+  border-radius: 50%;
+  background-color: #E89F71;
+  font-size: 12px;
+  color: #fff;
+}
+@media (min-width: 768px) {
+  .menu__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .menu__item.hover .menu__sub-list {
+    transform: translateY(0px);
+    opacity: 1;
+    visibility: visible;
+  }
+  .menu__item.hover .menu__arrow {
+    transform: rotate(-180deg);
+  }
+  .menu__item.hover .menu__link,
+  .menu__item.hover .menu__arrow {
+    color: #E89F71;
+  }
+  .menu__sub-list {
+    min-width: 120px;
+    left: 0;
+    position: absolute;
+    top: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease 0s;
+    transform: translateY(10px);
+    z-index: 5;
+  }
+}
+@media (min-width: 991px) {
+  .header__search {
+    flex: 1 1 auto;
+    padding-right: 50px;
+  }
+  .actions-header {
+    gap: 32px;
+  }
+  .actions-header__item--user {
+    width: 40px;
+    height: 40px;
+  }
+  .search-form__icon {
+    display: none;
+  }
+}
+@media (max-width: 991px) {
+  .header__body {
+    min-height: 80px;
+  }
+  .header__main {
+    flex: 1 0 auto;
+  }
+  .header__search {
+    padding-right: calc(15px + 17 * (100vw - 320px) / 671);
+  }
+  .search-form.active .search-form__item {
+    top: 100%;
+    opacity: 1;
+    visibility: visible;
+    overflow: hidden;
+  }
+  .search-form.active .search-form__icon {
+    color: #E89F71;
+  }
+  .search-form__item {
+    box-shadow: 0 0 5px rgba(44, 42, 42, 0.3);
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease 0s;
+  }
+}
+@media (max-width: 767px) {
+  .header__body {
+    min-height: 60px;
+  }
+  .menu {
+    flex: 0 1 420px;
+  }
+  .menu__body {
+    visibility: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    top: 0;
+    left: -100vw;
+    background-color: rgb(247, 246, 236);
+    transition: left 0.3s ease 0s;
+    padding: 70px 0px 30px;
+  }
+  .menu__body::before {
+    content: "";
+    position: fixed;
+    background-color: rgb(247, 246, 236);
+    width: 100%;
+    height: 60px;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  .menu__body--active {
+    left: 0;
+    visibility: visible;
+  }
+  .menu__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .menu__item {
+    width: 100%;
+  }
+  .menu__link {
+    font-size: 24px;
+    font-weight: 600;
+    background-color: transparent;
+  }
+  .menu__arrow {
+    font-size: 14px;
+  }
+  .menu__sub-inner {
+    height: 0;
+  }
+  .menu__sub-list {
+    transform: scaleY(0.1);
+    transform-origin: top;
+    padding: 0px 15px;
+  }
+  .menu__sub-item {
+    display: none;
+    line-height: 0;
+  }
+  .menu__sub-link {
+    font-size: 20px;
+    line-height: 1.5;
+  }
+  .btn-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 32px;
+    height: 26px;
+    margin: 0 0 3px calc(15px + 10 * (100vw - 320px) / 447);
+    padding: 2px;
+  }
+  .btn-menu span {
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+    transition: all 0.3s ease 0s, opacity 0.2s ease 0s;
+  }
+  .btn-menu.active span:nth-child(1) {
+    transform: rotate(-45deg);
+    transform-origin: right top;
+  }
+  .btn-menu.active span:nth-child(2) {
+    margin-left: 1px;
+    width: 0px;
+    opacity: 0;
+  }
+  .btn-menu.active span:nth-child(3) {
+    transform-origin: right bottom;
+    transform: rotate(45deg);
+  }
 }
