--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,22 +1,340 @@
 @import "_fonts";
 @import "_reset";
+$color  :red;
 
-.gilroy1 {
-  font-family : gilroy;
-font-weight: 400;
+body {
+  background-color : #FCF8F3;
 }
-.gilroy2 {
-  font-family : gilroy;
-font-weight: 500;
+
+//!----- header -----
+//?----------------------------- header ------------------------------------
+.header {
+  position : absolute;
+  top      : 0;
+  left     : 0;
+  width    : 100%;
+  z-index  : 50;
+
+  &__inner {
+    position : fixed;
+    top      : 0;
+    left     : 0;
+    width    : 100%;
+    z-index  : 50;
+  }
+
+  &__container {}
+
+  &__body {
+    display     : flex;
+    align-items : center;
+    padding     : 5px 0;
+    min-height  : 125px;
+    position    : relative;
+  }
+
+  &__main {
+    display     : flex;
+    flex        : 0 0 494/1240 * 100%;
+    align-items : center;
+  }
+
+  &__logo {
+    font-weight : 700;
+    font-size   : 24px;
+    line-height : calc(29px / 24px * 100%);
+    z-index     : 5;
+    position    : relative;
+  }
+
+  &__menu {}
+
+  &__search {
+    // background-color : rgb(114, 82, 82);
+
+  }
+
+  &__actions {}
 }
-.gilroy3 {
-  font-family : gilroy;
-font-weight: 600;
+
+.menu {
+  flex : 0 1 420px;
+
+  &__body {}
+
+  &__list {}
+
+  &__item {
+    display         : flex;
+    align-items     : center;
+    justify-content : space-between;
+    flex-wrap       : wrap;
+    margin          : 0 3px;
+    padding         : 5px 0;
+    position        : relative;
+
+    //!
+    &.hover {
+      .menu__sub-inner{
+      
+        height: auto;
+      }
+      .menu__sub-list {
+         transform: scaleY(1);
+        opacity            : 1;
+        visibility         : visible;
+        padding          : 15px 15px;
+        margin-top: 0;
+        margin: 0 -3px;
+      }
+      .menu__sub-item {
+        display: block;
+      }
+      
+      .menu__sub-link {
+        // font-size: 16px;
+      }
+
+      .menu__arrow {
+        transform : rotate(-180deg);
+      }
+
+      .menu__link,
+      .menu__arrow {
+        color : #E89F71;
+      }
+    }
+
+
+    @media (any-hover: hover) {
+      &:hover {
+        .menu__sub-list {
+          transform      : translateY(0px);
+          opacity        : 1;
+          visibility     : visible;
+          pointer-events : auto;
+          padding          : 15px;
+          // font-size      : 20px;
+
+        }
+
+        .menu__sub-item {
+          // line-height : 1.4;
+          display: block;
+          
+        }
+        
+        .menu__sub-link {
+          line-height : 1.2;
+          // font-size: 20px;
+
+        }
+
+        .menu__arrow {
+          transform : rotate(-180deg);
+        }
+
+        .menu__link,
+        .menu__arrow {
+          color : #E89F71;
+        }
+      }
+    }
+  }
+
+  &__link {
+    font-weight : 500;
+    line-height : 150%;
+    transition  : color .3s ease 0s;
+
+  }
+
+  &__arrow {
+    font-size   : 8px;
+    margin-left : 10px;
+    transition  : all .3s ease 0s;
+  }
+  &__sub-inner{
+    // width: 100%;
+     flex             : 1 0 100%;
+    
+    // overflow: hidden;
+    transition: all .3s ease 0s;
+    // border: 1px solid #E89F71;
+    // opacity: .5;
+    
+    
+  }
+  &__sub-list {
+    position         : relative;
+    background-color : #E89F71;
+    padding          :  15px;
+    // flex             : 1 1 100%;
+    // font-size: 10px;
+    // height: 1px;
+    // display: none;
+    transition       : all .3s ease 0s;
+    // margin-top: -100vh;
+    margin: 0 -3px;
+
+
+    // transform          : translateY(-20px);
+    // opacity            : 0;
+    // visibility         : hidden;
+    // display: none;
+    // pointer-events : auto;
+  }
+
+  &__sub-item {
+    // position: relative;
+    // z-index: -1;
+    // display: none;
+
+    &:not(:last-child) {
+      margin-bottom : 5px;
+    }
+  }
+
+  &__sub-link {
+    color          : #fff;
+    // line-height    : 1.2;
+    font-size: 16px;
+   
+  }
 }
-.gilroy4 {
-  font-family : gilroy;
-font-weight:700;
+
+.icon-arrow-down {}
+
+.search-form {
+  max-width : 473px;
+
+
+  &__icon {
+    position  : relative;
+    z-index   : 10;
+    font-size : 22px;
+    color     : #262F56;
+  }
+
+  &__item {
+    background-color     : #fff;
+    display              : flex;
+    // align-items      : center;
+  }
+
+  &__btn {
+    height    : 45px;
+    flex      : 0 0 45px;
+    font-size : 15px;
+    color     : #333333;
+  }
+
+  &__input {
+    font-size   : 14px;
+    line-height : 150%;
+    color       : #616161;
+    flex        : 1 0 auto;
+  }
 }
+
+.icon-search {}
+
+.actions-header {
+  position              : relative;
+  z-index               : 5;
+  display               : grid;
+  grid-template-columns : auto;
+  grid-auto-flow        : column;
+  align-items           : center;
+  gap                   : calc(15px + 17 * ((100vw - 320px) / (991 - 320)));
+
+  &__item {
+    line-height : 1;
+
+  }
+
+  &__item--favorites {
+    color         : #262F56;
+    // color     : red;
+    font-size     : 24px;
+    transition    : color .3s ease 0s;
+
+    @media (any-hover: hover) {
+      &:hover {
+        color : #E89F71;
+      }
+    }
+  }
+
+  &__item--user {
+    top               : -1px;
+    // width: 40px;
+    width             : calc(30px + 10 * ((100vw - 320px) / (1200 - 320)));
+    height            : calc(30px + 10 * ((100vw - 320px) / (1200 - 320)));
+    border-radius     : 50%;
+    overflow          : hidden;
+    // padding-bottom: 4px;
+  }
+}
+
+.icon-favorite {}
+
+.cart-header {
+  &__icon {
+    color : #262F56;
+
+    font-size       : 28px;
+    transition      : color .3s ease 0s;
+    position        : relative;
+    // line-height : 1;
+
+    // text-align      : center;
+
+
+
+    @media (any-hover: hover) {
+      &:hover {
+        color : #E89F71;
+      }
+    }
+  }
+
+  span {
+    position         : absolute;
+    width            : 20px;
+    height           : 20px;
+    align-items      : center;
+    display          : flex;
+    flex-direction   : column;
+    justify-content  : center;
+    line-height      : 1;
+    padding-bottom   : 2px;
+    top              : -10px;
+    right            : -10px;
+    border-radius    : 50%;
+    background-color : #E89F71;
+    font-size        : 12px;
+    color            : #fff;
+    // padding: 10px;
+
+
+  }
+
+  &__body {}
+
+  &__list {}
+}
+
+.icon-cart {}
+
+.cart-list {}
+
+.ibg {}
+
+.btn-menu {}
+
+//?----------------------------- header -- end -----------------------------
+
 
 
 @import "_media";
