--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -2,26 +2,26 @@
 *,
 *::before,
 *::after {
-    padding   : 0;
-    margin    : 0;
-    // bottom    : 0;
-    box-sizing: border-box;
+  padding       : 0;
+  margin        : 0;
+  // bottom    : 0;
+  box-sizing    : border-box;
 }
 
 a {
-    text-decoration: none;
-    color           : inherit;
+  text-decoration : none;
+  color           : inherit;
 }
 
 ul,
 ol,
 li {
-    list-style: none;
+  list-style : none;
 }
 
 img {
-    vertical-align: top;
-    max-width      : 100%;
+  vertical-align : top;
+  max-width      : 100%;
 }
 
 h1,
@@ -30,78 +30,83 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: inherit;
-    font-size  : inherit;
+  font-weight : inherit;
+  font-size   : inherit;
 }
 
 button {
-    color            : inherit;
-    font-size        : inherit;
-    line-height      : inherit;
-    background-color : transparent;
-    border           : none;
-    cursor           : pointer;
-    overflow         : hidden;
-    font-family      : inherit;
-    padding          : 0;
-  }
-  input{
-    outline: none;
-    border: none;
-  }
+  color            : inherit;
+  font-size        : inherit;
+  line-height      : inherit;
+  background-color : transparent;
+  border           : none;
+  cursor           : pointer;
+  overflow         : hidden;
+  font-family      : inherit;
+  padding          : 0;
+}
+
+input {
+  outline : none;
+  border  : none;
+}
 
 html,
 body {
-    height     : 100%;
+  height : 100%;
 }
 
 html {
-    // scroll-behavior : smooth;
-  }
-  
+  // scroll-behavior : smooth;
+}
+
 
 body {
-    font-family: gilroy, sans-serif;
-    font-size  : 16px;
-    font-weight: 400;
-    color       : #3A3A3A;
-    line-height: 1.2;
+  font-family : gilroy, sans-serif;
+  font-size   : 16px;
+  font-weight : 400;
+  color       : #3A3A3A;
+  line-height : 1.2;
 }
 
 /*---------------------------*/
 .wrapper {
-    overflow      : hidden;
-    display       : flex;
-    flex-direction: column;
-    min-height    : 100%;
+  overflow       : hidden;
+  display        : flex;
+  flex-direction : column;
+  min-height     : 100%;
 }
+
+$max-width  :1260;
 
 /*---------------------------*/
 [class*="__container"] {
-    max-width: 1260px;
-    padding  : 0 10px;
-    margin   : 0 auto;
+  max-width : $max-width + px;
+
+  padding : 0 10px;
+  margin  : 0 auto;
 }
+
 /*---------------------------*/
 .main {
-    flex : 1 1 auto;
-  }
+  flex : 1 1 auto;
+}
 
-  //! ----------------------------------
+//! ----------------------------------
 .ibg {
-    position : relative;
-  }
-  
-  .ibg img {
-    position   : absolute;
-    top        : 0;
-    left       : 0;
-    height     : 100%;
-    width      : 100%;
-    object-fit : cover;
-  }
-  
-  //! ----------------------------------
-  .ovh {
-    overflow : hidden;
-  }
+  position : relative;
+}
+
+.ibg img {
+  position   : absolute;
+  top        : 0;
+  left       : 0;
+  height     : 100%;
+  width      : 100%;
+  object-fit : cover;
+}
+
+//! ----------------------------------
+.ovh {
+  overflow : hidden;
+}
