--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,10 @@
 @import "_fonts";
 @import "_reset";
+@import "_footer-style";
+// @import "_button-burger";
 $color  :red;
 
 body {
-  background-color : #FCF8F3;
 }
 
 //!----- header -----
@@ -14,8 +15,9 @@ body {
   left     : 0;
   width    : 100%;
   z-index  : 50;
-
+  
   &__inner {
+    background-color : #FCF8F3;
     position : fixed;
     top      : 0;
     left     : 0;
@@ -35,7 +37,7 @@ body {
 
   &__main {
     display     : flex;
-    flex        : 0 0 494/1240 * 100%;
+    flex        : 0 0 calc(494/1240 * 100%);
     align-items : center;
   }
 
@@ -75,22 +77,30 @@ body {
 
     //!
     &.hover {
-      .menu__sub-inner{
-      
-        height: auto;
+      .menu__sub-inner {
+
+        max-height: 200vh;
+        overflow-y: auto;
+        // max-height : 100000px;
+       
       }
+
       .menu__sub-list {
-         transform: scaleY(1);
-        opacity            : 1;
-        visibility         : visible;
-        padding          : 15px 15px;
-        margin-top: 0;
-        margin: 0 -3px;
+        //  transform: scaleY(1);
+        // opacity            : 1;
+        // visibility         : visible;
+
+        padding    : 15px 15px;
+        // margin-top : 0;
+        // margin     : 0 -3px;
+        // max-height : 10000px;
+        overflow-y: auto;
       }
+
       .menu__sub-item {
-        display: block;
+        // display: block;
       }
-      
+
       .menu__sub-link {
         // font-size: 16px;
       }
@@ -109,23 +119,23 @@ body {
     @media (any-hover: hover) {
       &:hover {
         .menu__sub-list {
-          transform      : translateY(0px);
-          opacity        : 1;
-          visibility     : visible;
-          pointer-events : auto;
-          padding          : 15px;
+          transform          : translateY(0px);
+          opacity            : 1;
+          visibility         : visible;
+          pointer-events     : auto;
+          padding            : 15px;
           // font-size      : 20px;
 
         }
 
         .menu__sub-item {
           // line-height : 1.4;
-          display: block;
-          
+          // display : block;
+
         }
-        
+
         .menu__sub-link {
-          line-height : 1.2;
+          line-height  : 1.2;
           // font-size: 20px;
 
         }
@@ -154,28 +164,31 @@ body {
     margin-left : 10px;
     transition  : all .3s ease 0s;
   }
-  &__sub-inner{
+
+  &__sub-inner {
     // width: 100%;
-     flex             : 1 0 100%;
-    
+    flex : 1 0 100%;
+
     // overflow: hidden;
-    transition: all .3s ease 0s;
+    // transition : all .3s ease 0s;
     // border: 1px solid #E89F71;
     // opacity: .5;
-    
-    
+
+
   }
+
   &__sub-list {
-    position         : relative;
-    background-color : #E89F71;
-    padding          :  15px;
+    position                 : relative;
+    background-color         : #E89F71;
+    padding                  : 15px;
     // flex             : 1 1 100%;
     // font-size: 10px;
     // height: 1px;
     // display: none;
-    transition       : all .3s ease 0s;
+    // transition               : max-height .3s ease 0s, padding .4s ease 0s;
+    // transition           : all .3s ease 0s;
     // margin-top: -100vh;
-    margin: 0 -3px;
+    margin                   : 0 -3px;
 
 
     // transform          : translateY(-20px);
@@ -196,10 +209,10 @@ body {
   }
 
   &__sub-link {
-    color          : #fff;
+    color              : #fff;
     // line-height    : 1.2;
-    font-size: 16px;
-   
+    font-size          : 16px;
+
   }
 }
 
