--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,329 @@ body {
   overflow: hidden;
 }
 
+.main-slider {
+  background: #FCF8F3;
+}
+.main-slider__container {
+  position: relative;
+}
+.main-slider__body {
+  position: relative;
+  z-index: 2;
+  padding-top: 140px;
+}
+@media (min-width: 992px) {
+  .main-slider__body::before {
+    content: "";
+    position: absolute;
+    background: #F9F1E7;
+    width: 100vw;
+    height: 100%;
+    top: 0;
+    right: 366px;
+    z-index: 1;
+  }
+}
+@media (max-width: 991px) {
+  .main-slider__body {
+    padding-top: 80px;
+  }
+}
+@media (max-width: 767px) {
+  .main-slider__body {
+    padding-top: 60px;
+  }
+}
+@media (min-width: 992px) {
+  .main-slider__body {
+    display: flex;
+  }
+}
+.main-slider__content {
+  flex: 0 0 39.8387096774%;
+}
+.main-slider__slider {
+  flex: 1 1 auto;
+  min-width: 0;
+}
+.main-slider__btn {
+  display: none;
+  overflow: hidden;
+  max-width: 374px;
+  width: 100%;
+  color: #fff;
+  background: #E89F71;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 150%;
+  padding: 21px;
+}
+@media (max-width: 1260px) {
+  .main-slider__btn {
+    padding: calc(14px + 7 * ((100vw - 320px) / 940));
+  }
+}
+@media (any-hover: hover) {
+  .main-slider__btn:hover {
+    background: #df8249;
+  }
+}
+.main-slider__btn--active {
+  max-width: 100%;
+}
+@media (max-width: 991px) {
+  .main-slider__btn--active {
+    margin-top: 50px;
+    display: block;
+  }
+}
+
+.content-main {
+  align-self: start;
+  background: rgb(255, 255, 255);
+  -webkit-backdrop-filter: blur(15.5px);
+          backdrop-filter: blur(15.5px);
+  position: relative;
+  z-index: 5;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (max-width: 1260px) {
+  .content-main {
+    padding-top: calc(15px + 45 * (100vw - 320px) / 940);
+    padding-bottom: calc(15px + 45 * (100vw - 320px) / 940);
+  }
+}
+@media (min-width: 992px) and (max-width: 1260px) {
+  .content-main {
+    padding: calc(40px + 20 * (100vw - 992px) / 268);
+  }
+}
+@media (min-width: 1260px) {
+  .content-main {
+    padding: 60px;
+  }
+}
+.content-main__title {
+  font-weight: 700;
+  font-size: 56px;
+  margin-bottom: 16px;
+}
+@media (max-width: 1260px) {
+  .content-main__title {
+    font-size: calc(35px + 21 * (100vw - 320px) / 940);
+  }
+}
+.content-main__text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 150%;
+  color: #898989;
+}
+@media (max-width: 1260px) {
+  .content-main__text {
+    font-size: calc(16px + 4 * ((100vw - 320px) / 940));
+  }
+}
+@media (min-width: 992px) {
+  .content-main__btn--active {
+    margin-top: 50px;
+    display: block;
+  }
+}
+
+.swiper,
+.swiper-container {
+  overflow: hidden !important;
+  margin: 0 !important;
+  margin-right: calc(-100% - 233px) !important;
+  margin-left: calc(-100% - 409px) !important;
+  min-width: 0;
+}
+@media (max-width: 991px) {
+  .swiper,
+  .swiper-container {
+    margin: 0 !important;
+  }
+}
+
+.slider-main {
+  align-self: flex-end;
+  min-width: 0;
+}
+@media (max-width: 991px) {
+  .slider-main {
+    margin: 0 -10px;
+  }
+}
+@media (max-width: 991px) {
+  .slider-main__controls {
+    order: 2;
+  }
+}
+@media (max-width: 991px) {
+  .slider-main__body {
+    order: 1;
+  }
+}
+.slider-main__slide {
+  position: relative;
+}
+.slider-main__image {
+  padding-bottom: 59.2%;
+}
+.slider-main__content {
+  background: rgba(255, 255, 255, 0.72);
+  -webkit-backdrop-filter: blur(15.5px);
+          backdrop-filter: blur(15.5px);
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+  padding: 24px;
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
+  z-index: 1;
+  max-height: 200px;
+  overflow-y: auto;
+}
+.slider-main__title {
+  font-weight: 600;
+  font-size: 28px;
+  margin-bottom: 4px;
+}
+.slider-main__text {
+  font-weight: 500;
+  line-height: 150%;
+  color: #616161;
+  margin-bottom: 8px;
+}
+.slider-main__prise {
+  font-weight: 600;
+  font-size: 20px;
+  display: flex;
+  width: 242px;
+  justify-content: space-between;
+}
+.slider-main__prise span {
+  align-self: flex-end;
+  font-size: 12px;
+  line-height: 20px;
+  margin-left: 10px;
+}
+
+.controls-slider-main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0 22px 22px;
+}
+@media (max-width: 991px) {
+  .controls-slider-main {
+    margin: 22px;
+  }
+}
+.controls-slider-main__dots {
+  position: relative;
+  z-index: 1;
+  transition: all 0.3s ease 0s;
+  display: inline-flex;
+  align-items: center;
+  flex-wrap: wrap;
+  top: 0 !important;
+}
+.controls-slider-main__dots .swiper-pagination-bullet {
+  margin: 0 10px !important;
+  background: transparent;
+  opacity: 1;
+  border: 1px solid transparent;
+  width: 13px;
+  height: 32px;
+  transition: all 0.3s ease 0s;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.controls-slider-main__dots .swiper-pagination-bullet::before {
+  content: "";
+  display: inline-block;
+  width: 11px;
+  height: 11px;
+  background: #D8D8D8;
+  border-radius: 50%;
+  transition: all 0.3s ease 0s;
+}
+.controls-slider-main__dots .swiper-pagination-bullet:after {
+  content: "";
+  position: absolute;
+  border: 1px solid #E89F71;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: scale(0);
+  transition: all 0.3s ease 0s;
+  border-radius: 50%;
+}
+.controls-slider-main__dots .swiper-pagination-bullet-active {
+  border-radius: 50%;
+  background: transparent;
+  width: 32px;
+  height: 32px;
+}
+.controls-slider-main__dots .swiper-pagination-bullet-active::before {
+  content: "";
+  background: #E89F71;
+}
+.controls-slider-main__dots .swiper-pagination-bullet-active:after {
+  content: "";
+  position: absolute;
+  border: 1px solid #E89F71;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: scale(1);
+}
+.slider-arrows {
+  display: grid;
+  grid-template-columns: repeat(2, 48px);
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+}
+@media (max-width: 991px) {
+  .slider-arrows {
+    display: none;
+  }
+}
+.slider-arrows__arrow {
+  height: 48px;
+  border-radius: 50%;
+  font-size: 10px;
+  transition: all 0.3s ease 0s;
+}
+.slider-arrows__arrow--prev {
+  background: rgba(232, 159, 113, 0.322);
+  color: #E89F71;
+  transform: rotate(90deg);
+}
+@media (any-hover: hover) {
+  .slider-arrows__arrow--prev:hover {
+    background: rgba(236, 125, 56, 0.733);
+    color: #e4712a;
+  }
+}
+.slider-arrows__arrow--next {
+  background: #E89F71;
+  color: #fff;
+  transform: rotate(-90deg);
+}
+@media (any-hover: hover) {
+  .slider-arrows__arrow--next:hover {
+    background: rgb(226, 111, 39);
+  }
+}
+
 .title-footer,
 .footer__logo {
   font-size: 24px;
@@ -321,7 +644,7 @@ body {
     font-size: 14px;
   }
   .menu-footer__column--active .menu-footer__list {
-    max-height: 500px;
+    max-height: 200px;
     margin-bottom: 20px;
   }
   .menu-footer__column--active .menu-footer__title {
@@ -438,12 +761,26 @@ body {
   z-index: 50;
 }
 .header__inner {
-  background-color: #FCF8F3;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 50;
+  background: rgba(252, 248, 243, 0.493);
+}
+.header__container {
+  position: relative;
+}
+@media (min-width: 992px) {
+  .header__container::before {
+    content: "";
+    position: absolute;
+    background: rgba(249, 241, 231, 0.342);
+    width: 100vw;
+    height: 100%;
+    top: 0;
+    right: 376px;
+  }
 }
 .header__body {
   display: flex;
