--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,57 @@ body {
   }
 }
 
+.advantages {
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+@media (max-width: 1260px) {
+  .advantages {
+    padding-top: calc(30px + 60 * ((100vw - 320px) / 940));
+  }
+}
+@media (max-width: 1260px) {
+  .advantages {
+    padding-bottom: calc(30px + 60 * ((100vw - 320px) / 940));
+  }
+}
+.advantages__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.advantages__item {
+  display: inline-grid;
+  padding: 15px 0;
+  grid-template: auto auto/85px 1fr;
+}
+@media (max-width: 991px) {
+  .advantages__item {
+    min-width: 300px;
+  }
+}
+@media (max-width: 767px) {
+  .advantages__item {
+    grid-template: auto auto/65px 1fr;
+  }
+}
+.advantages__icon {
+  text-align: center;
+  align-self: center;
+  grid-row: span 2;
+}
+.advantages__title {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 150%;
+  margin-bottom: 3px;
+}
+.advantages__text {
+  font-weight: 500;
+  line-height: 150%;
+  color: #898989;
+}
+
 .title-footer,
 .footer__logo {
   font-size: 24px;
