--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "_main-slider";
 @import "_advantages";
 @import "_products";
+@import "_rooms";
 
 @import "_footer-style";
 $color   :red;
