--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,6 @@ li {
 
 img {
   vertical-align: top;
-  max-width: 100%;
 }
 
 h1,
@@ -314,7 +313,6 @@ body {
 
 .swiper,
 .swiper-container {
-  overflow: hidden !important;
   margin: 0 !important;
   margin-right: calc(-100% - 233px) !important;
   margin-left: calc(-100% - 409px) !important;
@@ -402,7 +400,14 @@ body {
     margin: 22px;
   }
 }
-.controls-slider-main__dots {
+@media (max-width: 767px) {
+  .controls-slider-main__arrows {
+    display: none !important;
+  }
+}
+
+.slider-rooms__dotts,
+.controls-slider-main__dotts {
   position: relative;
   z-index: 1;
   transition: all 0.3s ease 0s;
@@ -411,7 +416,8 @@ body {
   flex-wrap: wrap;
   top: 0 !important;
 }
-.controls-slider-main__dots .swiper-pagination-bullet {
+.slider-rooms__dotts .swiper-pagination-bullet,
+.controls-slider-main__dotts .swiper-pagination-bullet {
   margin: 0 10px !important;
   background: transparent;
   opacity: 1;
@@ -424,7 +430,8 @@ body {
   justify-content: center;
   position: relative;
 }
-.controls-slider-main__dots .swiper-pagination-bullet::before {
+.slider-rooms__dotts .swiper-pagination-bullet::before,
+.controls-slider-main__dotts .swiper-pagination-bullet::before {
   content: "";
   display: inline-block;
   width: 11px;
@@ -433,7 +440,8 @@ body {
   border-radius: 50%;
   transition: all 0.3s ease 0s;
 }
-.controls-slider-main__dots .swiper-pagination-bullet:after {
+.slider-rooms__dotts .swiper-pagination-bullet:after,
+.controls-slider-main__dotts .swiper-pagination-bullet:after {
   content: "";
   position: absolute;
   border: 1px solid #E89F71;
@@ -445,17 +453,20 @@ body {
   transition: all 0.3s ease 0s;
   border-radius: 50%;
 }
-.controls-slider-main__dots .swiper-pagination-bullet-active {
+.slider-rooms__dotts .swiper-pagination-bullet-active,
+.controls-slider-main__dotts .swiper-pagination-bullet-active {
   border-radius: 50%;
   background: transparent;
   width: 32px;
   height: 32px;
 }
-.controls-slider-main__dots .swiper-pagination-bullet-active::before {
+.slider-rooms__dotts .swiper-pagination-bullet-active::before,
+.controls-slider-main__dotts .swiper-pagination-bullet-active::before {
   content: "";
   background: #E89F71;
 }
-.controls-slider-main__dots .swiper-pagination-bullet-active:after {
+.slider-rooms__dotts .swiper-pagination-bullet-active:after,
+.controls-slider-main__dotts .swiper-pagination-bullet-active:after {
   content: "";
   position: absolute;
   border: 1px solid #E89F71;
@@ -465,16 +476,12 @@ body {
   left: 0;
   transform: scale(1);
 }
+
 .slider-arrows {
   display: grid;
   grid-template-columns: repeat(2, 48px);
   -moz-column-gap: 8px;
        column-gap: 8px;
-}
-@media (max-width: 991px) {
-  .slider-arrows {
-    display: none;
-  }
 }
 .slider-arrows__arrow {
   height: 48px;
@@ -485,6 +492,9 @@ body {
 .slider-arrows__arrow--prev {
   background: rgba(232, 159, 113, 0.322);
   color: #E89F71;
+}
+.slider-arrows__arrow--prev span {
+  display: inline-block;
   transform: rotate(90deg);
 }
 @media (any-hover: hover) {
@@ -496,6 +506,9 @@ body {
 .slider-arrows__arrow--next {
   background: #E89F71;
   color: #fff;
+}
+.slider-arrows__arrow--next span {
+  display: inline-block;
   transform: rotate(-90deg);
 }
 @media (any-hover: hover) {
@@ -606,10 +619,22 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
   gap: 32px;
   margin-bottom : 32px;
+  margin: 0 -20px;
 }
 @media (max-width: 1260px) {
   .products__items {
     margin-bottom : calc(20px + 12 * ((100vw - 320px) / 940));
+  }
+}
+.products__items .products__item {
+  margin: 0 10px;
+}
+@media (min-width: 580px) {
+  .products__items {
+    margin: 0;
+  }
+  .products__items .products__item {
+    margin: 0;
   }
 }
 .products__more {
@@ -875,6 +900,258 @@ body {
   }
 }
 
+.rooms {
+  padding-top: 44px;
+  padding-bottom: 44px;
+  background: #FCF8F3;
+}
+@media (max-width: 1260px) {
+  .rooms {
+    padding-top: calc(30px + 14 * ((100vw - 320px) / 940));
+  }
+}
+@media (max-width: 1260px) {
+  .rooms {
+    padding-bottom: calc(30px + 14 * ((100vw - 320px) / 940));
+  }
+}
+@media (min-width: 991px) {
+  .rooms__container {
+    display: flex;
+  }
+}
+.rooms__body {
+  flex: 0 0 37.5%;
+  position: relative;
+  z-index: 5;
+  align-self: center;
+}
+@media (min-width: 991px) {
+  .rooms__body {
+    padding-right: 80px;
+  }
+}
+@media (min-width: 991px) and (max-width: 1260px) {
+  .rooms__body {
+    padding-right: calc(30px + 50 * ((100vw - 320px) / 940));
+  }
+}
+@media (max-width: 990px) {
+  .rooms__body {
+    padding-bottom: calc(30px + 20 * ((100vw - 320px) / 671));
+  }
+}
+.rooms__title {
+  font-size: 40px;
+  text-align: left;
+  margin-bottom: 8px;
+}
+@media (max-width: 1260px) {
+  .rooms__title {
+    font-size: calc(30px + 10 * ((100vw - 320px) / 940));
+  }
+}
+.rooms__text {
+  font-weight: 500;
+  line-height: 150%;
+  color: #616161;
+  margin-bottom: 24px;
+}
+.rooms__button {
+  max-width: 176px;
+  color: #fff;
+  background-color: #E89F71;
+  margin-left: 0;
+}
+@media (any-hover: hover) {
+  .rooms__button:hover {
+    background-color: #df7f44;
+  }
+}
+.rooms__slider {
+  min-width: 0;
+  align-self: flex-start;
+}
+
+.slider-rooms {
+  position: relative;
+}
+@media (max-width: 990px) {
+  .slider-rooms {
+    margin: 0 -10px !important;
+  }
+}
+@media (min-width: 480px) {
+  .slider-rooms__body {
+    min-height: 600px;
+  }
+}
+@media (max-width: 480px) {
+  .slider-rooms__body {
+    width: 100% !important;
+  }
+}
+.slider-rooms__body:before {
+  content: "";
+  position: absolute;
+  background-color: #FCF8F3;
+  width: 100vw;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: translate(-100%, 0);
+  z-index: 2;
+  display: block;
+}
+.slider-rooms__slide {
+  width: 372px !important;
+  position: relative !important;
+  overflow: hidden;
+  min-height: 585px;
+}
+@media (max-width: 1260px) {
+  .slider-rooms__slide {
+    min-height: calc(400px + 185 * ((100vw - 320px) / 940));
+  }
+}
+@media (max-width: 480px) {
+  .slider-rooms__slide {
+    width: 100% !important;
+  }
+}
+.slider-rooms__slide.swiper-slide-active .slider-rooms__image {
+  padding-bottom: 156.4516129032%;
+}
+.slider-rooms__image {
+  background-color: #000;
+  padding-bottom: 130.6451612903%;
+  transition: padding-bottom 0.7s ease 0s;
+  overflow: hidden;
+}
+@media (max-width: 766px) {
+  .slider-rooms__image {
+    padding-bottom: 156.4516129032%;
+  }
+}
+.slider-rooms__image img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.slider-rooms__content {
+  position: absolute;
+  max-width: 240px;
+  bottom: 24px;
+  left: 24px;
+  padding: 32px;
+  z-index: 1;
+  background: rgba(255, 255, 255, 0.72);
+  -webkit-backdrop-filter: blur(1.5px);
+          backdrop-filter: blur(1.5px);
+}
+@media (max-width: 1260px) {
+  .slider-rooms__content {
+    bottom: calc(15px + 9 * ((100vw - 320px) / 940));
+  }
+}
+@media (max-width: 1260px) {
+  .slider-rooms__content {
+    left: calc(15px + 9 * ((100vw - 320px) / 940));
+  }
+}
+@media (max-width: 1260px) {
+  .slider-rooms__content {
+    padding: calc(15px + 17 * ((100vw - 320px) / 940));
+  }
+}
+.slider-rooms__content span {
+  position: absolute;
+  bottom: 0;
+  left: 100%;
+  width: 48px;
+  height: 48px;
+  background-color: #E89F71;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slider-rooms__title {
+  font-weight: 600;
+  font-size: 28px;
+}
+@media (max-width: 1260px) {
+  .slider-rooms__title {
+    font-size: calc(24px + 4 * ((100vw - 320px) / 940));
+  }
+}
+.slider-rooms__arrows {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  z-index: 6;
+  transform: translate(0, -50%);
+  justify-content: space-between;
+  left: 20px;
+  width: calc(100% - 40px);
+}
+@media (min-width: 1300px) {
+  .slider-rooms__arrows {
+    width: calc(100% + 48px);
+    left: -24px;
+  }
+}
+.slider-rooms__dotts {
+  height: 40px !important;
+}
+@media (max-width: 766px) {
+  .slider-rooms__dotts {
+    margin-top: 20px;
+    justify-content: center;
+  }
+}
+@media (min-width: 767px) {
+  .slider-rooms__dotts {
+    display: flex;
+    position: absolute;
+    top: auto !important;
+    bottom: 30px !important;
+    left: 386px !important;
+    z-index: 1;
+  }
+}
+
+.label-slider {
+  display: grid;
+  color: #000;
+  gap: 8px;
+  align-items: center;
+  grid-template-columns: auto 27px auto;
+}
+.label-slider:not(:last-child) {
+  margin-bottom: 8px;
+}
+.label-slider__line {
+  height: 1px;
+  background-color: #000;
+}
+.slider-arrows {
+  align-items: center;
+}
+.slider-arrows__arrow {
+  pointer-events: auto;
+}
+.slider-arrows__arrow--while {
+  background-color: #fff;
+  color: #E89F71;
+  box-shadow: 0px 4px 14px 1px rgba(0, 0, 0, 0.16);
+}
+@media (any-hover: hover) {
+  .slider-arrows__arrow--while:hover {
+    background-color: #E89F71;
+    color: #fff;
+  }
+}
 .title-footer,
 .footer__logo {
   font-size: 24px;
