--- a/scss/_main-slider.scss
+++ b/scss/_main-slider.scss
@@ -1,9 +1,9 @@
 .main-slider {
 
-  background : #FCF8F3;
+  background  : #FCF8F3;
 
   &__container {
-    position : relative;
+    position  : relative;
 
   }
 
@@ -14,66 +14,66 @@
     //!------------------  media -- min-width -- 992 + px  ------------------
     @media(min-width:#{992 + px}) {
       &::before {
-        content    : '';
-        position   : absolute;
-        background : #F9F1E7;
+        content     : '';
+        position    : absolute;
+        background  : #F9F1E7;
 
-        width   : 100vw;
-        height  : 100%;
-        top     : 0;
-        right   : 366px;
-        z-index : 1;
+        width    : 100vw;
+        height   : 100%;
+        top      : 0;
+        right    : 366px;
+        z-index  : 1;
       }
 
     }
 
 
-    position     : relative;
-    z-index      : 2;
-    padding-top  : 140px;
+    position      : relative;
+    z-index       : 2;
+    padding-top   : 140px;
 
 
 
 
     //!------------------  media -- max-width -- 991 + px  ------------------
     @media(max-width:#{991 + px}) {
-      padding-top : 80px;
+      padding-top  : 80px;
 
     }
 
     //!------------------  media -- max-width -- 767 + px  ------------------
     @media(max-width:#{767 + px}) {
-      padding-top : 60px;
+      padding-top  : 60px;
 
     }
 
     //!------------------  media -- min-width -- 992 + px  ------------------
     @media(min-width:#{992 + px}) {
-      display : flex;
+      display  : flex;
     }
 
 
   }
 
   &__content {
-    flex : 0 0 494/1240 * 100%;
+    flex  : 0 0 494/1240 * 100%;
   }
 
   &__slider {
-    flex      : 1 1 auto;
-    min-width : 0;
+    flex       : 1 1 auto;
+    min-width  : 0;
   }
 
   &__btn {
-    display             : none;
-    overflow            : hidden;
-    max-width           : 374px;
-    width               : 100%;
-    color               : #fff;
-    background          : #E89F71;
-    font-weight         : 600;
-    font-size           : 20px;
-    line-height         : 150%;
+    display              : none;
+    overflow             : hidden;
+    max-width            : 374px;
+    width                : 100%;
+    color                : #fff;
+    background           : #E89F71;
+    font-weight          : 600;
+    font-size            : 20px;
+    line-height          : 150%;
     // padding         : calc(14px + 7 * ((100vw - 320px) / ($max-width - 320))) 15px;
     // transition  : all .3s ease 0s;
     @include ads("padding", 14, 21, 1, $max-width, 320);
@@ -81,7 +81,7 @@
 
     @media (any-hover: hover) {
       &:hover {
-        background : #df8249;
+        background  : #df8249;
       }
     }
 
@@ -90,13 +90,13 @@
 
 
     &--active {
-      max-width : 100%;
+      max-width  : 100%;
 
       //!------------------  media -- min-width -- 991 + px  ------------------
       @media(max-width:#{991 + px}) {
 
-        margin-top : 50px;
-        display    : block;
+        margin-top  : 50px;
+        display     : block;
 
       }
     }
@@ -107,20 +107,20 @@
 //? ----------     content-main 
 
 .content-main {
-  align-self      : start;
-  background      : rgb(255, 255, 255);
-  backdrop-filter : blur(15.5px);
+  align-self       : start;
+  background       : rgb(255, 255, 255);
+  backdrop-filter  : blur(15.5px);
 
-  position      : relative;
-  z-index       : 5;
-  padding-left  : 15px;
-  padding-right : 15px;
+  position       : relative;
+  z-index        : 5;
+  padding-left   : 15px;
+  padding-right  : 15px;
 
 
   //!------------------  media -- max-width -- $max-width + px  ------------------
   @media(max-width:#{$max-width + px}) {
-    padding-top    : calc(15px + 45 * ((100vw - 320px) / ($max-width - 320)));
-    padding-bottom : calc(15px + 45 * ((100vw - 320px) / ($max-width - 320)));
+    padding-top     : calc(15px + 45 * ((100vw - 320px) / ($max-width - 320)));
+    padding-bottom  : calc(15px + 45 * ((100vw - 320px) / ($max-width - 320)));
   }
 
 
@@ -130,26 +130,26 @@
 
     //!------------------  media -- max-width -- $max-width + px  ------------------
     @media(max-width:#{$max-width + px}) {
-      padding : calc(40px + 20 * ((100vw - 992px) / ($max-width - 992)));
+      padding  : calc(40px + 20 * ((100vw - 992px) / ($max-width - 992)));
     }
 
   }
 
   //!------------------  media -- min-width -- $max-width + px  ------------------
   @media(min-width:#{$max-width + px}) {
-    padding : 60px;
+    padding  : 60px;
   }
 
 
 
   &__title {
-    font-weight   : 700;
-    font-size     : 56px;
-    margin-bottom : 16px;
+    font-weight    : 700;
+    font-size      : 56px;
+    margin-bottom  : 16px;
 
     //!------------------  media -- max-width -- $max-width + px  ------------------
     @media(max-width:#{$max-width + px}) {
-      font-size : calc(35px + 21 * ((100vw - 320px) / ($max-width - 320)));
+      font-size  : calc(35px + 21 * ((100vw - 320px) / ($max-width - 320)));
       // @include ads("font-size", 20, 50, 1, $max-width, 320);
       ;
     }
@@ -157,13 +157,13 @@
   }
 
   &__text {
-    font-weight     : 500;
+    font-weight      : 500;
     // font-size   : calc(16px + 4 * ((100vw - 320px) / ($max-width - 320)));
     @include ads("font-size", 16, 20, 1, $max-width, 320);
 
 
-    line-height : 150%;
-    color       : #898989;
+    line-height  : 150%;
+    color        : #898989;
 
     //!------------------  media -- max-width -- $max-width + px  ------------------
 
@@ -187,8 +187,8 @@
       @media(min-width:#{992 + px}) {
 
 
-        margin-top : 50px;
-        display    : block;
+        margin-top  : 50px;
+        display     : block;
       }
     }
   }
@@ -197,36 +197,36 @@
 .swiper,
 .swiper-container {
 
-  overflow         : hidden !important;
+  // overflow          : hidden !important;
   // width: 934px;
   // margin: 0 -100% + 200px  !important;
-  margin           : 0 !important;
+  margin            : 0 !important;
   // margin-right :  -100% !important;
   // margin-right : 0 !important;
 
   // margin-left :  -200px !important;
-  margin-right : calc(-100% + -233px) !important;
-  margin-left  : calc(-100% + -409px) !important;
-  min-width    : 0;
+  margin-right  : calc(-100% + -233px) !important;
+  margin-left   : calc(-100% + -409px) !important;
+  min-width     : 0;
 
   //!------------------  media -- max-width -- 991 + px  ------------------
   @media(max-width:#{991 + px}) {
-    margin : 0 !important;
+    margin  : 0 !important;
   }
 
 }
 
 //? ---------------.slider-main  -------------
 .slider-main {
-  align-self : flex-end;
-  min-width  : 0;
+  align-self  : flex-end;
+  min-width   : 0;
 
   // display        : flex;
   // flex-direction : column;
   // width: 100%;
   //!------------------  media -- max-width -- 991 + px  ------------------
   @media(max-width:#{991 + px}) {
-    margin : 0 -10px;
+    margin  : 0 -10px;
   }
 
 
@@ -235,7 +235,7 @@
     //!------------------  media -- max-width -- 991 + px  ------------------
     @media(max-width:#{991 + px}) {
 
-      order : 2;
+      order  : 2;
     }
 
   }
@@ -245,219 +245,237 @@
     // margin-left : -200px !important;
     // margin: 0 -100%;
     @media(max-width:#{991 + px}) {
-      order : 1;
+      order  : 1;
     }
 
   }
 
   &__slide {
-    position        : relative;
+    position         : relative;
     // margin-left : -200px !important;
   }
 
   &__image {
-    padding-bottom : 59.2%;
+    padding-bottom  : 59.2%;
 
   }
 
   //?--------------------           &__content 
   &__content {
-    background      : rgba(255, 255, 255, 0.72);
-    backdrop-filter : blur(15.5px);
-    column-gap      : 8px;
-    padding         : 24px;
-    position        : absolute;
-    bottom          : 40px;
-    right           : 40px;
+    background       : rgba(255, 255, 255, 0.72);
+    backdrop-filter  : blur(15.5px);
+    column-gap       : 8px;
+    padding          : 24px;
+    position         : absolute;
+    bottom           : 40px;
+    right            : 40px;
     // width:100%;
-    z-index         : 1;
-    max-height      : 200px;
-    overflow-y      : auto;
+    z-index          : 1;
+    max-height       : 200px;
+    overflow-y       : auto;
   }
 
   &__title {
-    font-weight   : 600;
-    font-size     : 28px;
-    margin-bottom : 4px;
+    font-weight    : 600;
+    font-size      : 28px;
+    margin-bottom  : 4px;
   }
 
   &__text {
-    font-weight   : 500;
-    line-height   : 150%;
-    color         : #616161;
-    margin-bottom : 8px;
+    font-weight    : 500;
+    line-height    : 150%;
+    color          : #616161;
+    margin-bottom  : 8px;
   }
 
   &__prise {
-    font-weight     : 600;
-    font-size       : 20px;
-    display         : flex;
-    width           : 242px;
-    justify-content : space-between;
+    font-weight      : 600;
+    font-size        : 20px;
+    display          : flex;
+    width            : 242px;
+    justify-content  : space-between;
 
     span {
-      align-self  : flex-end;
-      font-size   : 12px;
-      line-height : 20px;
-      margin-left : 10px;
+      align-self   : flex-end;
+      font-size    : 12px;
+      line-height  : 20px;
+      margin-left  : 10px;
     }
   }
 }
 
 // ?-------------------       .controls-slider-main 
+// .slider-rooms,
 .controls-slider-main {
-  display          : flex;
-  justify-content  : space-between;
+  display           : flex;
+  justify-content   : space-between;
   // padding-left: 22px;
-  align-items      : center;
+  align-items       : center;
   // margin-top: 10px;
   // margin-bottom: 22px;
-  margin           : 10px 0 22px 22px;
+  margin            : 10px 0 22px 22px;
 
   //!------------------  media -- max-width -- 991 + px  ------------------
   @media(max-width:#{991 + px}) {
-    margin   : 22px;
+    margin    : 22px;
     // order: 2;
   }
 
+  &__arrows {
 
-  &__dots {
-    position        : relative;
-    z-index         : 1;
-    transition      : all .3s ease 0s;
-    // height      : 32px;
-    display         : inline-flex;
-    align-items     : center;
-    flex-wrap       : wrap;
-    top: 0 !important;
+    //!------------------  media -- max -width -- 767 + px  ------------------
+    @media(max-width:#{767 + px}) {
+      display  : none !important;
+    }
+  }
+}
 
-    .swiper-pagination-bullet {
-      margin                   : 0 10px !important;
-      // background           : #D8D8D8;
-      background               : transparent;
-      opacity                  : 1;
-      // background-color : red !important;
-      border                   : 1px solid transparent;
-      width                    : 13px;
-      height                   : 32px;
-      transition               : all .3s ease 0s;
-      display                  : inline-flex;
-      align-items              : center;
-      justify-content          : center;
-      position                 : relative;
+.slider-rooms__dotts,
+.controls-slider-main__dotts {
+  position         : relative;
+  z-index          : 1;
+  transition       : all .3s ease 0s;
+  // height      : 32px;
+  display          : inline-flex;
+  align-items      : center;
+  flex-wrap        : wrap;
+  top              : 0 !important;
 
-      &::before {
-        content       : '';
-        display       : inline-block;
-        width         : 11px;
-        height        : 11px;
-        background    : #D8D8D8;
-        border-radius : 50%;
-        transition    : all .3s ease 0s;
-      }
+  .swiper-pagination-bullet {
+    margin                    : 0 10px !important;
+    // background           : #D8D8D8;
+    background                : transparent;
+    opacity                   : 1;
+    // background-color : red !important;
+    border                    : 1px solid transparent;
+    width                     : 13px;
+    height                    : 32px;
+    transition                : all .3s ease 0s;
+    display                   : inline-flex;
+    align-items               : center;
+    justify-content           : center;
+    position                  : relative;
 
-      &:after {
-        content       : '';
-        position      : absolute;
-        border        : 1px solid #E89F71;
-        width         : 100%;
-        height        : 100%;
-        top           : 0;
-        left          : 0;
-        transform     : scale(0);
-        transition    : all .3s ease 0s;
-        border-radius : 50%;
-
-      }
-
+    &::before {
+      content        : '';
+      display        : inline-block;
+      width          : 11px;
+      height         : 11px;
+      background     : #D8D8D8;
+      border-radius  : 50%;
+      transition     : all .3s ease 0s;
     }
 
-    .swiper-pagination-bullet-active {
-      // border        : 1px solid #E89F71;
-      border-radius : 50%;
-      background    : transparent;
-      width         : 32px;
-      height        : 32px;
+    &:after {
+      content        : '';
+      position       : absolute;
+      border         : 1px solid #E89F71;
+      width          : 100%;
+      height         : 100%;
+      top            : 0;
+      left           : 0;
+      transform      : scale(0);
+      transition     : all .3s ease 0s;
+      border-radius  : 50%;
 
-      // display: inline-flex;
-      // align-items: center;
-      // justify-content: center;
-      &::before {
-        content           : '';
-        // display       : inline-block;
-        // width         : 11px;
-        // height        : 11px;
-        background        : #E89F71;
-        // border-radius : 50%;
-      }
-
-      &:after {
-        content   : '';
-        position  : absolute;
-        border    : 1px solid #E89F71;
-        width     : 100%;
-        height    : 100%;
-        top       : 0;
-        left      : 0;
-        transform : scale(1);
-
-      }
-
-      // opacity: 1;
     }
-
 
   }
 
-  &__arrows {}
+  .swiper-pagination-bullet-active {
+    // border        : 1px solid #E89F71;
+    border-radius  : 50%;
+    background     : transparent;
+    width          : 32px;
+    height         : 32px;
+
+    // display: inline-flex;
+    // align-items: center;
+    // justify-content: center;
+    &::before {
+      content            : '';
+      // display       : inline-block;
+      // width         : 11px;
+      // height        : 11px;
+      background         : #E89F71;
+      // border-radius : 50%;
+    }
+
+    &:after {
+      content    : '';
+      position   : absolute;
+      border     : 1px solid #E89F71;
+      width      : 100%;
+      height     : 100%;
+      top        : 0;
+      left       : 0;
+      transform  : scale(1);
+
+    }
+
+    // opacity: 1;
+  }
+
+
 }
+
+
 
 //?---------------------------.slider-arrows
 .slider-arrows {
 
-  //!------------------  media -- max -width -- 991 + px  ------------------
-  @media(max-width:#{991 + px}) {
-    display : none;
-  }
+
 
   display                : grid;
   grid-template-columns  : repeat(2, 48px);
   column-gap             : 8px;
 
   &__arrow {
-    height        : 48px;
-    border-radius : 50%;
-    font-size     : 10px;
-    transition    : all .3s ease 0s;
+    height         : 48px;
+    border-radius  : 50%;
+    font-size      : 10px;
+    transition     : all .3s ease 0s;
 
   }
 
   &__arrow--prev {
-    background : rgba(232, 159, 113, 0.322);
-    color      : #E89F71;
-    transform  : rotate(90deg);
+    background  : rgba(232, 159, 113, 0.322);
+    color       : #E89F71;
+
+    span {
+      display    : inline-block;
+      transform  : rotate(90deg);
+
+    }
+
 
     @media (any-hover: hover) {
 
 
       &:hover {
-        background : rgba(236, 125, 56, 0.733);
-        color      : #e4712a;
+        background  : rgba(236, 125, 56, 0.733);
+        color       : #e4712a;
 
       }
     }
   }
 
   &__arrow--next {
-    background : #E89F71;
-    color      : #fff;
-    transform  : rotate(-90deg);
+    background  : #E89F71;
+    color       : #fff;
+
+    span {
+      display    : inline-block;
+      transform  : rotate(-90deg);
+
+    }
+
 
     @media (any-hover: hover) {
 
 
       &:hover {
-        background     : rgb(226, 111, 39);
+        background      : rgb(226, 111, 39);
         // color      : #e4712a;
 
       }
